--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -239,6 +239,9 @@
   "bytes": {
     "message": "Bytes"
   },
+  "canToggleInSettings": {
+    "message": "You can re-enable this notification in Settings -> Alerts."
+  },
   "cancel": {
     "message": "Cancel"
   },
@@ -2101,9 +2104,9 @@
   "walletSeed": {
     "message": "Seed phrase"
   },
-  "web3UsageNotification": {
-    "message": "We noticed that the site at $1 attempted to use window.web3.",
-    "description": "$1 is a URL."
+  "web3ShimUsageNotification": {
+    "message": "We noticed that the current website tried to use the removed window.web3 API. If the site appears to be broken, please click $1 for more information.",
+    "description": "$1 is a clickable link."
   },
   "welcome": {
     "message": "Welcome to MetaMask"
