--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -433,6 +433,12 @@
   "dataBackupFoundInfo": {
     "message": "Some of your account data was backed up during a previous installation of MetaMask. This could include your settings, contacts, and tokens. Would you like to restore this data now?"
   },
+  "dataPersistenceFailingDescription": {
+    "message": "We're having trouble saving your data to disk. Please make sure you have free disk space so that you don't lose any data when the browser restarts."
+  },
+  "dataPersistenceFailingTitle": {
+    "message": "Failed saving to disk"
+  },
   "decimal": {
     "message": "Decimals of Precision"
   },
