feat: remove zh_TW
https://app.clickup.com/t/55vpd1

--- a/app/_locales/index.json
+++ b/app/_locales/index.json
@@ -1,5 +1,4 @@
 [
   { "code": "en", "name": "English" },
-  { "code": "zh_CN", "name": "中文(简体)" },
-  { "code": "zh_TW", "name": "中文(繁體)" }
+  { "code": "zh_CN", "name": "中文(简体)" }
 ]
