--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -676,7 +676,7 @@
     "message": "代币余额不足."
   },
   "base32AddressNotice": {
-    "message": "Conflux地址规则已更新，可以自动将旧地址转换为新地址； 之后，以0x开头的地址将停止使用，并逐渐切换到CFX的地址； 新的地址规则，不同的网络，不同的地址； 如果有特殊需要，可以通过转换工具获取旧地址。"
+    "message": "Conflux地址规则已更新，可以自动将旧地址转换为新地址；之后，以0x开头的地址将停止使用，并逐渐切换到新地址；新的地址规则，不同的网络，不同的地址；如果有特殊需要，可以通过转换工具获取旧地址。"
   },
   "base32AddressNoticeShort": {
     "message": "Conflux 地址规则已升级，已自动将旧地址转换为新地址"
