Update standard swaps build quote screen token verification message

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1845,6 +1845,14 @@
     "message": "Swap $1 to $2",
     "description": "Used in the transaction display list to describe a swap. $1 and $2 are the symbols of tokens in involved in a swap."
   },
+  "swapTokenVerificationMessage": {
+    "message": "$1 Always confirm the token address on $2. $3",
+    "description": "Points the user to etherscan as a place they can verify information about a token. $1 is replaced with the translation for \"swapTokenVerificationSources\" and $2 with the translation for \"etherscan\""
+  },
+  "swapTokenVerificationSources": {
+    "message": "Verified on $1 sources.",
+    "description": "This will replace $1 in the \"swapTokenVerificationMessage\" translation. Indicates the number of token information sources that recognize the symbol + address. $1 is a decimal number."
+  },
   "swapTransactionComplete": {
     "message": "Transaction complete"
   },
@@ -2084,10 +2092,6 @@
   },
   "userName": {
     "message": "Username"
-  },
-  "verifyThisTokenOn": {
-    "message": "Verify this token on $1",
-    "description": "Points the user to etherscan as a place they can verify information about a token. $1 is replaced with the translation for \"etherscan\""
   },
   "viewAccount": {
     "message": "View Account"
