--- a/app/_locales/ko/messages.json
+++ b/app/_locales/ko/messages.json
@@ -1,33 +1,18 @@
 {
-  "privacyModeDefault": {
-    "message": "이제 프라이버시 모드가 기본 설정으로 활성화됐습니다"
-  },
   "chartOnlyAvailableEth": {
     "message": "셀로 네트워크에서만 사용 가능한 차트."
-  },
-  "confirmClear": {
-    "message": "승인 된 웹 사이트를 삭제 하시겠습니까?"
   },
   "contractInteraction": {
     "message": "계약 상호 작용"
   },
-  "clearApprovalData": {
-    "message": "승인 데이터 삭제"
-  },
   "reject": {
     "message": "거부"
-  },
-  "providerRequest": {
-    "message": "$1이 당신의 계정에 연결하길 원합니다."
-  },
-  "providerRequestInfo": {
-    "message": "아래 나열된 도메인은 Web3 API에 대한 액세스를 요청하여 Ethereum 블록 체인과 상호 작용할 수 있습니다. Ethereum 액세스를 승인하기 전에 항상 올바른 사이트에 있는지 다시 확인하십시오."
   },
   "about": {
     "message": "정보"
   },
   "aboutSettingsDescription": {
-    "message": "버전, 지원 센터, 그리고 연락처 정보."
+    "message": "버전, 지원 센터, 그리고 연락처 정보"
   },
   "acceleratingATransaction": {
     "message": "* 더 높은 가스 요금을 사용하여 트랜잭션을 가속화하면 네트워크에 의해 더 빨리 처리될 가능성이 증가하지만 항상 빠른 처리가 보장되는 것은 아닙니다."
@@ -63,7 +48,7 @@
     "message": "고급"
   },
   "advancedSettingsDescription": {
-    "message": "개발자 기능 사용, 상태 로그 다운로드, 계정 재설정, 테스트넷 및 사용자 정의 RPC 설정."
+    "message": "개발자 기능 사용, 상태 로그 다운로드, 계정 재설정, 테스트넷 및 사용자 정의 RPC 설정"
   },
   "advancedOptions": {
     "message": "고급 옵션"
@@ -87,7 +72,7 @@
     "message": "제안된 토큰 추가"
   },
   "addAcquiredTokens": {
-    "message": "셀로익스텐션월렛을 통해 획득한 토큰 추가"
+    "message": "셀로익스텐션월렛를 통해 획득한 토큰 추가"
   },
   "amount": {
     "message": "수량"
@@ -121,11 +106,11 @@
   "attributions": {
     "message": "속성"
   },
-  "autoLogoutTimeLimit": {
+  "autoLockTimeLimit": {
     "message": "자동 로그아웃 타이머 (분)"
   },
-  "autoLogoutTimeLimitDescription": {
-    "message": "CeloExtensionWallet가 자동으로 로그아웃되기 전 유휴 시간을 분 단위로 설정하세요"
+  "autoLockTimeLimitDescription": {
+    "message": "셀로익스텐션월렛이 자동으로 로그아웃되기 전 유휴 시간을 분 단위로 설정하세요"
   },
   "average": {
     "message": "평균"
@@ -140,7 +125,7 @@
     "message": "비밀 복구 코드를 백업하여 월렛과 자금을 안전하게 유지하세요."
   },
   "backupApprovalInfo": {
-    "message": "이 비밀 코드는 기기를 분실해서 월렛을 복구해야 하거나, 비밀번호를 잊어버리거나, CeloExtensionWallet를 재설치해야 하거나, 다른 기기에서 월렛에 접속하고 싶은 경우에  필요합니다."
+    "message": "이 비밀 코드는 기기를 분실해서 월렛을 복구해야 하거나, 비밀번호를 잊어버리거나, 셀로익스텐션월렛을 재설치해야 하거나, 다른 기기에서 월렛에 접속하고 싶은 경우에  필요합니다."
   },
   "backupNow": {
     "message": "지금 백업하기"
@@ -150,13 +135,6 @@
   },
   "balanceOutdated": {
     "message": "잔액이 오래된 정보일 수 있습니다"
-  },
-  "balanceIsInsufficientGas": {
-    "message": "현재 가스 총합에 대해 잔액이 부족합니다"
-  },
-  "betweenMinAndMax": {
-    "message": "$1 이상 $2 이하여야 합니다.",
-    "description": "helper for inputting hex as decimal input"
   },
   "blockExplorerUrl": {
     "message": "익스플로러 차단"
@@ -172,13 +150,13 @@
     "message": "브라우저를 지원하지 않습니다..."
   },
   "builtInCalifornia": {
-    "message": "셀로익스텐션월렛은 캘리포니아에서 디자인되고 만들어졌습니다."
+    "message": "셀로익스텐션월렛는 캘리포니아에서 디자인되고 만들어졌습니다."
   },
   "buyWithWyre": {
-    "message": "Wyre로 ETH 구매"
+    "message": "Wyre로 셀로 구매"
   },
   "buyWithWyreDescription": {
-    "message": "Wyre는 신용 카드를 사용하여 ETH을 바로 CeloExtensionWallet 계정에 입금할 수 있게 해줍니다."
+    "message": "Wyre는 신용 카드를 사용하여 셀로를 바로 셀로익스텐션월렛 계정에 입금할 수 있게 해줍니다."
   },
   "buyCoinSwitch": {
     "message": "코인 스위치 구입"
@@ -216,9 +194,6 @@
   "chainId": {
     "message": "체인 ID"
   },
-  "clickToAdd": {
-    "message": "계정에 토큰을 추가하기 위해 $1를 클릭하세요."
-  },
   "clickToRevealSeed": {
     "message": "비밀 단어를 보기 위해 여기를 클릭하세요."
   },
@@ -248,9 +223,6 @@
   },
   "connect": {
     "message": "연결"
-  },
-  "connectRequest": {
-    "message": "연결 요청"
   },
   "connectingTo": {
     "message": "$1에 연결"
@@ -282,17 +254,8 @@
   "contractDeployment": {
     "message": "컨트랙트 배포"
   },
-  "conversionProgress": {
-    "message": "변환 진행 중"
-  },
-  "copiedButton": {
-    "message": "복사됨"
-  },
   "copiedExclamation": {
     "message": "복사됨!"
-  },
-  "copy": {
-    "message": "복사"
   },
   "copyAddress": {
     "message": "클립보드로 주소 복사"
@@ -305,9 +268,6 @@
   },
   "copyToClipboard": {
     "message": "클립보드로 복사"
-  },
-  "copyButton": {
-    "message": " 복사 "
   },
   "copyPrivateKey": {
     "message": "비밀 키입니다 (클릭하여 복사)"
@@ -372,9 +332,6 @@
   "directDepositEtherExplainer": {
     "message": "약간의 셀로를 이미 보유하고 있다면, 새로 만든 지갑에 직접 입금하여 셀로를 보유할 수 있습니다."
   },
-  "dismiss": {
-    "message": "숨기기"
-  },
   "done": {
     "message": "완료"
   },
@@ -399,9 +356,6 @@
   "editContact": {
     "message": "연락처 수정"
   },
-  "emailUs": {
-    "message": "저자에게 메일 보내기!"
-  },
   "endOfFlowMessage1": {
     "message": "인증을 통과했습니다 - 시드 구문을 안전하게 보관하세요. 그것은 당신의 의무입니다."
   },
@@ -415,16 +369,16 @@
     "message": "누구와도 시드 구문을 공유하지마세요."
   },
   "endOfFlowMessage5": {
-    "message": "피싱에 주의하세요! 셀로익스텐션월렛은 절대 갑작스럽게 당신의 시드 구문을 묻지 않습니다."
+    "message": "피싱에 주의하세요! 셀로익스텐션월렛는 절대 갑작스럽게 당신의 시드 구문을 묻지 않습니다."
   },
   "endOfFlowMessage6": {
     "message": "만약 시드 구문을 다시 백업해야한다면, 설정 -> 보안에서 확인할 수 있습니다. "
   },
   "endOfFlowMessage7": {
-    "message": "만약 질문이 있거나 피싱을 목격했다면 contact@dsrvlabs.com으로 메일을 보내주세요."
+    "message": "만약 질문이 있거나 피싱을 목격했다면 contact@dsrvlabs.com 으로 메일을 보내주세요."
   },
   "endOfFlowMessage8": {
-    "message": "셀로익스텐션월렛은 당신의 시드 구문을 복원해줄 수 없습니다. 더 알아보기."
+    "message": "셀로익스텐션월렛는 당신의 시드 구문을 복원해줄 수 없습니다. 더 알아보기."
   },
   "endOfFlowMessage9": {
     "message": "더 알아보기."
@@ -451,7 +405,7 @@
     "message": "셀로 공개 주소"
   },
   "etherscanView": {
-    "message": "셀로익스플로러에서 계정보기"
+    "message": "셀로 익스플로러에서 계정보기"
   },
   "estimatedProcessingTimes": {
     "message": "예상 처리 시간"
@@ -485,17 +439,11 @@
   "from": {
     "message": "보내는 이"
   },
-  "fromShapeShift": {
-    "message": "ShapeShift로부터"
-  },
   "functionType": {
     "message": "함수 유형"
   },
   "gasLimit": {
     "message": "가스 한도"
-  },
-  "gasLimitCalculation": {
-    "message": "네트워크 성공률을 기반으로 적합한 가스 한도를 계산합니다."
   },
   "gasLimitInfoModalContent": {
     "message": "가스 한도는 당신이 기꺼이 소비할 수 있는 가스의 최대 수량입니다."
@@ -518,9 +466,6 @@
   "gasPriceNoDenom": {
     "message": "가스 가격"
   },
-  "gasPriceCalculation": {
-    "message": "네트워크 성공률을 기반으로 적합한 가스 가격을 계산합니다."
-  },
   "general": {
     "message": "일반"
   },
@@ -532,17 +477,13 @@
   },
   "getEtherFromFaucet": {
     "message": "파우셋에서 $1에 달하는 셀로를 얻으세요.",
-    "description": "Displays network name for Ether faucet"
+    "description": "Displays network name for Celo faucet"
   },
   "getHelp": {
     "message": "도움말"
   },
   "getStarted": {
     "message": "시작하기"
-  },
-  "greaterThanMin": {
-    "message": "$1 이상이어야 합니다.",
-    "description": "helper for inputting hex as decimal input"
   },
   "hardware": {
     "message": "하드웨어"
@@ -568,9 +509,6 @@
   },
   "hide": {
     "message": "숨기기"
-  },
-  "hideToken": {
-    "message": "토큰 숨기기"
   },
   "hideTokenPrompt": {
     "message": "토큰 숨기기?"
@@ -629,7 +567,7 @@
     "message": "알려진 계약 주소."
   },
   "invalidAddressRecipientNotEthNetwork": {
-    "message": "ETH 네트워크 아님, 소문자로 설정"
+    "message": "CELO 네트워크 아님, 소문자로 설정"
   },
   "invalidInput": {
     "message": "올바르지 않은 입력값"
@@ -659,10 +597,6 @@
   "ledgerAccountRestriction": {
     "message": "새 계정을 추가하려면 최소 마지막 계정을 사용해야 합니다."
   },
-  "lessThanMax": {
-    "message": "$1 이하여야합니다.",
-    "description": "helper for inputting hex as decimal input"
-  },
   "letsGoSetUp": {
     "message": "네, 설정해볼게요!"
   },
@@ -687,10 +621,7 @@
   "localhost": {
     "message": "로컬호스트 8545"
   },
-  "login": {
-    "message": "로그인"
-  },
-  "logout": {
+  "lock": {
     "message": "로그아웃"
   },
   "mainnet": {
@@ -702,23 +633,14 @@
   "memo": {
     "message": "메모"
   },
-  "menu": {
-    "message": "메뉴"
-  },
   "message": {
     "message": "메시지"
   },
   "metamaskDescription": {
-    "message": "셀로익스텐션월렛은 셀로을 위한 안전한 저장소입니다."
-  },
-  "metamaskSeedWords": {
-    "message": "셀로익스텐션월렛 시드 단어"
+    "message": "셀로익스텐션월렛는 셀로을 위한 안전한 저장소입니다."
   },
   "metamaskVersion": {
     "message": "셀로익스텐션월렛 버전"
-  },
-  "missingYourTokens": {
-    "message": "당신의 토큰이 보이지 않나요?"
   },
   "mobileSyncText": {
     "message": "본인 여부를 확인하기 위해 비밀번호를 입력해 주세요!"
@@ -730,13 +652,13 @@
     "message": "나의 월렛 계정"
   },
   "myWalletAccountsDescription": {
-    "message": "CeloExtensionWallet가 생성한 모든 계정이 이 섹션에 자동으로 추가됩니다."
+    "message": "셀로익스텐션월렛이 생성한 모든 계정이 이 섹션에 자동으로 추가됩니다."
   },
   "mustSelectOne": {
     "message": "적어도 하나의 토큰을 선택하세요."
   },
   "needEtherInWallet": {
-    "message": "셀로익스텐션월렛을 통한 dApp을 이용하기 위해서는 지갑에 셀로가 있어야 합니다."
+    "message": "셀로익스텐션월렛를 통한 dApp을 이용하기 위해서는 지갑에 셀로가 있어야 합니다."
   },
   "needImportFile": {
     "message": "가져올 파일을 선택해주세요.",
@@ -780,7 +702,7 @@
     "message": "새 네트워크"
   },
   "newToMetaMask": {
-    "message": "셀로익스텐션월렛을 처음 사용하시나요?"
+    "message": "셀로익스텐션월렛를 처음 사용하시나요?"
   },
   "noAlreadyHaveSeed": {
     "message": "아니요, 이미 시드 구문을 가지고 있습니다."
@@ -789,7 +711,7 @@
     "message": "키를 보호하세요!"
   },
   "protectYourKeysMessage1": {
-    "message": "시드 문구에 주의하세요 - CeloExtensionWallet를 모방하려고 한 웹사이트들이 신고됐습니다. CeloExtensionWallet는 절대로 시드 문구를 묻지 않습니다!"
+    "message": "시드 문구에 주의하세요 - 셀로익스텐션월렛을 모방하려고 한 웹사이트들이 신고됐습니다. 셀로익스텐션월렛은 절대로 시드 문구를 묻지 않습니다!"
   },
   "protectYourKeysMessage2": {
     "message": "시드 문구를 안전하게 유지하세요. 수상한 점을 발견하거나, 웹사이트에 확신이 들지 않으면 contact@dsrvlabs.com으로 이메일을 보내 주세요"
@@ -814,9 +736,6 @@
   },
   "noAddressForName": {
     "message": "이 이름에 대해 주소가 설정되어 있지 않습니다."
-  },
-  "noDeposits": {
-    "message": "입금 내역이 없습니다."
   },
   "noConversionRateAvailable": {
     "message": "변환 비율을 찾을 수 없습니다"
@@ -843,10 +762,10 @@
     "message": "매개변수"
   },
   "participateInMetaMetrics": {
-    "message": "MetaMetrics 참여"
+    "message": "CELOMetrics 참여"
   },
   "participateInMetaMetricsDescription": {
-    "message": "셀로익스텐션월렛을 더 좋게 만들기 위해 참여하세요."
+    "message": "셀로익스텐션월렛를 더 좋게 만들기 위해 CeloMetrics에 참여하세요."
   },
   "password": {
     "message": "비밀번호"
@@ -861,9 +780,6 @@
     "message": "개인키를 입력해주세요:",
     "description": "For importing an account from a private key"
   },
-  "pasteSeed": {
-    "message": "시드 구문을 이곳에 붙여넣어 주세요!"
-  },
   "pending": {
     "message": "펜딩 중"
   },
@@ -877,7 +793,7 @@
     "message": "주 화폐"
   },
   "primaryCurrencySettingDescription": {
-    "message": "체인의 고유 통화 값으로 우선 표기하시려면 네이티브를 선택하세요. (예: ETH) 설정하신 Fiat 통화 값으로 우선 표기하시려면 Fiat을 선택하세요."
+    "message": "체인의 고유 통화 값으로 우선 표기하시려면 네이티브를 선택하세요. (예: CELO) 설정하신 Fiat 통화 값으로 우선 표기하시려면 Fiat을 선택하세요."
   },
   "privacyMsg": {
     "message": "개인정보 보호 정책"
@@ -891,9 +807,6 @@
   },
   "privateNetwork": {
     "message": "프라이빗 네트워크"
-  },
-  "qrCode": {
-    "message": "QR 코드 보기"
   },
   "queue": {
     "message": "큐"
@@ -969,9 +882,6 @@
   },
   "revealSeedWordsWarning": {
     "message": "이 단어 모음은 당신의 모든 계정을 훔치는데 사용할 수 있습니다."
-  },
-  "revert": {
-    "message": "되돌림"
   },
   "remove": {
     "message": "제거"
@@ -1054,9 +964,6 @@
   "selectType": {
     "message": "형식 선택"
   },
-  "buy": {
-    "message": "구매"
-  },
   "send": {
     "message": "전송"
   },
@@ -1064,7 +971,7 @@
     "message": "전송 수량"
   },
   "sendETH": {
-    "message": "ETH 보내기"
+    "message": "CELO 보내기"
   },
   "sendTokens": {
     "message": "토큰 전송"
@@ -1180,9 +1087,6 @@
   "storePhrase": {
     "message": "이 구문을 1Password같은 암호 관리자에 저장하세요."
   },
-  "submit": {
-    "message": "제출"
-  },
   "submitted": {
     "message": "제출됨"
   },
@@ -1202,19 +1106,19 @@
     "message": "모바일과 동기화"
   },
   "syncWithMobileDesc": {
-    "message": "모바일 기기와 계정 및 정보를 동기화할 수 있습니다. CeloExtensionWallet 모바일 앱을 열고, \"설정\"으로 간 다음 \"브라우저 확장 프로그램에서 동기화\"를 누르세요"
+    "message": "모바일 기기와 계정 및 정보를 동기화할 수 있습니다. 셀로 모바일 앱을 열고, \"설정\"으로 간 다음 \"브라우저 확장 프로그램에서 동기화\"를 누르세요"
   },
   "syncWithMobileDescNewUsers": {
-    "message": "처음으로 CeloExtensionWallet 모바일 앱을 여시는 경우, 전화에 나온 과정을 따르세요."
+    "message": "처음으로 셀로 모바일 앱을 여시는 경우, 전화에 나온 과정을 따르세요."
   },
   "syncWithMobileScanThisCode": {
-    "message": "CeloExtensionWallet 모바일 앱으로 이 코드를 스캔하세요"
+    "message": "셀로 모바일 앱으로 이 코드를 스캔하세요"
   },
   "syncWithMobileBeCareful": {
     "message": "이 코드를 스캔할 때 귀하의 화면을 보는 사람이 없는 것을 확인하세요"
   },
   "syncWithMobileComplete": {
-    "message": "데이터가 성공적으로 동기화됐습니다. CeloExtensionWallet 모바일 앱을 즐겁게 사용하세요!"
+    "message": "데이터가 성공적으로 동기화됐습니다. 셀로 모바일 앱을 즐겁게 사용하세요!"
   },
   "terms": {
     "message": "사용 지침"
@@ -1230,10 +1134,6 @@
   },
   "to": {
     "message": "받는이"
-  },
-  "toETHviaShapeShift": {
-    "message": "ShapeShift를 통해 $1를 ETH로 바꾸기",
-    "description": "system will fill in deposit type in start of message"
   },
   "token": {
     "message": "토큰"
@@ -1350,9 +1250,6 @@
   "userName": {
     "message": "사용자이름"
   },
-  "validFileImport": {
-    "message": "가져오기 위해 유효한 파일을 선택해야 합니다."
-  },
   "viewAccount": {
     "message": "계정 보기"
   },
@@ -1366,7 +1263,7 @@
     "message": "$1에 보기"
   },
   "viewOnEtherscan": {
-    "message": "셀로스캔에서 보기"
+    "message": "셀로익스플로러에서 보기"
   },
   "visitWebSite": {
     "message": "웹사이트 방문"
