--- a/app/_locales/ko/messages.json
+++ b/app/_locales/ko/messages.json
@@ -231,7 +231,7 @@
     "message": "Kovan 테스트넷 접속 중"
   },
   "connectingToMainnet": {
-    "message": "셀로 메인넷 접속 중"
+    "message": "Ethereum 메인넷 접속 중"
   },
   "connectingToRopsten": {
     "message": "Ropsten 테스트넷 접속 중"
@@ -309,7 +309,7 @@
     "message": "소수 자릿수"
   },
   "defaultNetwork": {
-    "message": "셀로 트랜잭션의 기본 네트워크는 메인넷입니다."
+    "message": "셀로 트랜잭션의 기본 네트워크는 셀로 메인넷입니다."
   },
   "delete": {
     "message": "삭제"
@@ -625,7 +625,7 @@
     "message": "로그아웃"
   },
   "mainnet": {
-    "message": "셀로 메인넷"
+    "message": "이더리움 메인넷"
   },
   "memorizePhrase": {
     "message": "이 구문을 기억하세요."
@@ -903,6 +903,15 @@
   },
   "goerli": {
     "message": "Goerli 테스트 네트워크"
+  },
+  "celo": {
+    "message": "셀로 메인넷"
+  },
+  "alfa": {
+    "message": "Alfajores 테스트넷"
+  },
+  "bakl": {
+    "message": "Baklava 테스트넷"
   },
   "save": {
     "message": "저장"
