Another faulty usage of geimporteerde

--- a/app/_locales/nl/messages.json
+++ b/app/_locales/nl/messages.json
@@ -163,7 +163,7 @@
     "message": " Geïmporteerde accounts worden niet gekoppeld aan de seedphrase van uw oorspronkelijk gemaakte MetaMask-account. Meer informatie over geïmporteerde accounts"
   },
   "imported": {
-    "message": "geïmporteerde",
+    "message": "geïmporteerd",
     "description": "status showing that an account has been fully loaded into the keyring"
   },
   "infoHelp": {
