respond to feedback

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -165,6 +165,9 @@
     "message": "Approval Tx Gas Cost"
   },
   "approve": {
+    "message": "Approve spend limit"
+  },
+  "approveButtonText": {
     "message": "Approve"
   },
   "approveSpendLimit": {
